--- a/crypto/public/index.html
+++ b/crypto/public/index.html
@@ -11,7 +11,10 @@
   </head>
   <body>
 
-  <button id="btd">PUT</button>
+  <button id="btdGraph">Graph</button>
+  <button id="btdPut">PUT</button>
+
+  <button id="btdGetW">GET wallet</button>
 
   <div id="container"></div>
 
