--- a/crypto/public/wallet.html
+++ b/crypto/public/wallet.html
@@ -16,7 +16,7 @@
 	<script src="lib/popper.min.js" type="text/javascript"></script>
 	<script src="lib/bootstrap-4.0.0-dist/js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="https://code.highcharts.com/highcharts.js" type="text/javascript"></script>
-	<script src="asset/index-js.js" type="text/javascript"></script>
+	<script src="asset/wallet.js" type="text/javascript"></script>
 </head>
 <body>
 	<section id="menu" class="container-fluid">
@@ -29,33 +29,24 @@
 			    <ul class="navbar-nav ml-auto">
 			    	<li class="nav-item">
 			        	<a class="nav-link" href="index.html" >Accueil</a>
-			        </li>        
+			        </li>
 			        <li class="nav-item active">
 			        	<a class="nav-link" href="wallet.html" target="_blank">Portefeuille</a>
 			        </li>
-			    </ul>			    
+			    </ul>
 		    </div>
-		</nav>	
+		</nav>
 	</section>
 
 	<section id="myWallet">
 		<div class="container">
 			<div class="row">
 				<h5 class="col-lg-12 col-md-12 col-sm-12 text-center">Portefeuille</h5>
-				<div id="account" class="col-lg-12 col-md-12 col-sm-12 text-center">					
-					<p>Vous disposez de : 15000,23 €</p>
+				<div id="account" class="col-lg-12 col-md-12 col-sm-12 text-center">
+					<p>Vous disposez de : <span id="moneySpan"></span> €</p>
 					<p>Nom et nombre de cryptomonnaies possédees :</p>
-					<ul class="nav justify-content-center">
-  						<li class="nav-item">
-    						<a class="nav-link" href="#"> 152.054 BTC</a>
-					  	</li>
-					  	<li class="nav-item">
-					   		<a class="nav-link" href="#">152.054 BTC</a>
-					  	</li>
-					  	<li class="nav-item">
-					    	<a class="nav-link" href="#">152.054 BTC</a>
-					  	</li>					  	
-					</ul>					
+					<ul class="nav justify-content-center" id="listMoney">
+					</ul>
 				</div>
 			</div>
 		</div>
@@ -76,35 +67,8 @@
 							  <th scope="col">Date</th>
 							</tr>
 						</thead>
-						<tbody>
-							<tr>
-							  <th scope="row">1</th>
-							  <td>Mark</td>
-							  <td>Otto</td>
-							  <td>@mdo</td>
-							  <td>@mdo</td>
-							</tr>
-							<tr>
-							  <th scope="row">2</th>
-							  <td>Jacob</td>
-							  <td>Thornton</td>
-							  <td>@fat</td>
-							  <td>@mdo</td>
-							</tr>
-							<tr>
-							  <th scope="row">3</th>
-							  <td>Larry</td>
-							  <td>the Bird</td>
-							  <td>@twitter</td>
-							  <td>@mdo</td>
-							</tr>
-							<tr>
-							  <th scope="row">3</th>
-							  <td>Larry</td>
-							  <td>the Bird</td>
-							  <td>@twitter</td>
-							  <td>@mdo</td>
-							</tr>	
+						<tbody id="tbodyWallet">
+
 						</tbody>
 					</table>
 				</div>
@@ -138,9 +102,9 @@
 							<br>
 							<label>Prix actuel de la monnaie : 666€</label>
 							<label>Valeur totale de l'achat : 666€</label>
-							<br>	
+							<br>
 							<input type="hidden" id="priceCurrency" name="priceCurrency" placeholder="" value="">
-							<input type="hidden" id="priceTotal" name="priceCurrency" placeholder="" value="">							
+							<input type="hidden" id="priceTotal" name="priceCurrency" placeholder="" value="">
 							<button type="submit" class="btn btn-dark active" id="buyCrypto" name="buyCrypto">Acheter</button>
 						</form>
 					</div>
@@ -166,8 +130,8 @@
 							<br>
 							<label>Prix actuel de la monnaie : 666€</label>
 							<label>Valeur totale de la vente : 666€</label>
-							<br>							
-							<input type="hidden" id="priceCurrency" name="priceCurrency" placeholder="" value="">	
+							<br>
+							<input type="hidden" id="priceCurrency" name="priceCurrency" placeholder="" value="">
 							<button type="submit" class="btn btn-dark active" id="sellCrypto" name="sellCrypto">Vendre</button>
 						</form>
 					</div>
